add sidebar content and some basic styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <div class="sidebar1">
+                <ul>
+                    <li class="sidebar-link main-link">Dashboard</li>
+                </ul>
+            </div>
+            <div class="sidebar2">
+                <ul>
+                    <li class="sidebar-link">Home</li>
+                    <li class="sidebar-link">Profile</li>
+                    <li class="sidebar-link">Messages</li>
+                    <li class="sidebar-link">History</li>
+                    <li class="sidebar-link">Tasks</li>
+                    <li class="sidebar-link">Communities</li>
+                </ul>
+            </div>
+            <div class="sidebar3">
+                <ul>
+                    <li class="sidebar-link">Settings</li>
+                    <li class="sidebar-link">Support</li>
+                    <li class="sidebar-link">Privacy</li>
+                </ul>
+            </div>
+        </div>
         <div class="header"></div>
         <div class="main-content"></div>
     </div>
