Add header content and grid layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,39 @@
                 </ul>
             </div>
         </div>
-        <div class="header"></div>
+        <div class="header">
+            <div id="search-bar">
+                <input class="hover-big" type="image">
+                <form action="">
+                    <input type="search" id="search" placeholder="Search...">
+                </form>
+            </div>
+            <div id="user-area">
+                <div class="hover-big">
+                    <img id="notif" src="" alt="notification bell">
+                </div>
+                <div class="hover-big">
+                    <img class="avi-small" id="" src="" alt="user-avi">
+                </div>
+                <div class="hover-big">
+                    Lucas Grillos
+                </div>
+            </div>
+            <div id="welcome-banner">
+                <img class="avi-large hover-big" src="" alt="user-avi">
+                <h2 class="greeting">Hi there,</h2>
+                <h1>Lucas Grillos (LucasIsAWizard)</h1>
+            </div>
+            <div class="header-buttons">
+                <button class="blue-button">
+                    New
+                </button>
+                <button class="blue-button">
+                    Upload
+                </button>
+                <button class="blue-button">Share</button>
+            </div>
+        </div>
         <div class="main-content"></div>
     </div>
     
