--- a/index.html
+++ b/index.html
@@ -34,35 +34,34 @@
             </div>
         </div>
         <div class="header">
-            <div id="search-bar">
+            <div id="search-bar" class="header-item">
                 <input class="hover-big" type="image">
                 <form action="">
                     <input type="search" id="search" placeholder="Search...">
                 </form>
             </div>
-            <div id="user-area">
+
+            <div id="user-area" class="header-item">
                 <div class="hover-big">
                     <img id="notif" src="" alt="notification bell">
                 </div>
                 <div class="hover-big">
                     <img class="avi-small" id="" src="" alt="user-avi">
                 </div>
-                <div class="hover-big">
-                    Lucas Grillos
+                <div class="hover-big">Lucas Grillos</div>
+            </div>
+
+            <div id="welcome-banner" class="header-item">
+                <img class="avi-large hover-big" src="" alt="user-avi">
+                <div class="greeting">
+                    <h2>Hi there,</h2>
+                    <h1>Lucas Grillos (LucasIsAWizard)</h1>
                 </div>
             </div>
-            <div id="welcome-banner">
-                <img class="avi-large hover-big" src="" alt="user-avi">
-                <h2 class="greeting">Hi there,</h2>
-                <h1>Lucas Grillos (LucasIsAWizard)</h1>
-            </div>
-            <div class="header-buttons">
-                <button class="blue-button">
-                    New
-                </button>
-                <button class="blue-button">
-                    Upload
-                </button>
+
+            <div id="header-buttons" class="header-item">
+                <button class="blue-button">New</button>
+                <button class="blue-button">Upload</button>
                 <button class="blue-button">Share</button>
             </div>
         </div>
