add style changes to header elements

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             </div>
         </div>
         <div class="header">
-            <div id="search-bar" class="header-item">
+            <div id="search" class="header-item">
                 <input class="hover-big" type="image">
                 <form action="">
-                    <input type="search" id="search" placeholder="Search...">
+                    <input id="search-bar" type="search" id="search" placeholder="Search...">
                 </form>
             </div>
 
@@ -55,7 +55,7 @@
                 <img class="avi-large hover-big" src="" alt="user-avi">
                 <div class="greeting">
                     <h2>Hi there,</h2>
-                    <h1>Lucas Grillos (LucasIsAWizard)</h1>
+                    <h1>Lucas Grillos (<span>@LucasIsAWizard</span>)</h1>
                 </div>
             </div>
 
