add styling to project area and additional markup

--- a/index.html
+++ b/index.html
@@ -66,65 +66,79 @@
             </div>
         </div>
         <div class="main-content">
-            <div class="projects">
-                <h2 class="content-header">Your Projects</h2>
-                <div class="project-card">
-                    <h4>Super Cool Project</h4>
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur 
-                        adipisicing elit. Repudiandae saepe, 
-                        ex totam vel eveniet quos exercitationem 
-                        placeat praesentium laudantium.
-                    </p>
-                </div>
-                <div class="project-card">
-                    <h4>Less Cool Project</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Laboriosam, beatae? 
-                        Beatae enim molestiae nemo nesciunt 
-                        animi quam exercitationem recusandae 
-                        repellendus vitae dolore saepe id 
-                        voluptatem temporibus earum molestias 
-                        laboriosam?
-                    </p>
-                </div>
-                <div class="project-card">
-                    <h4>Impossible App</h4>
-                    <p>
-                        Lorem ipsum dolor sit, amet consectetur 
-                        adipisicing elit. Adipisci fugit nobis 
-                        inventore!
-                    </p>
-                </div>
-                <div class="project-card">
-                    <h4>Easy Peasy App</h4>
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur 
-                        adipisicing elit. Necessitatibus at 
-                        distinctio ipsam perspiciatis eaque libero 
-                        quasi iure facilis, a quae!
-                    </p>
-                </div>
-                <div class="project-card">
-                    <h4>Ad Blocker</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Veritatis accusamus 
-                        fuga dicta reiciendis facilis totam sint 
-                        dolorem sequi?
-                    </p>
-                </div>
-                <div class="project-card">
-                    <h4>Money Maker</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur 
-                        adipisicing elit. Fugiat voluptate ullam 
-                        quae quos aliquid quidem facilis cum quia 
-                        porro temporibus, placeat velit, accusamus
-                        voluptas fuga dolore. Deserunt omnis 
-                        repudiandae ad!
-                    </p>
+            <div class="project-area">
+                <h2 class="project-header">Your Projects</h2>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h4>Super Cool Project</h4>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur
+                                adipisicing elit. Repudiandae saepe,
+                                ex totam vel eveniet quos exercitationem
+                                placeat praesentium laudantium.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h4>Less Cool Project</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Laboriosam, beatae?
+                                Beatae enim molestiae nemo nesciunt
+                                animi quam exercitationem recusandae
+                                repellendus vitae dolore saepe id
+                                voluptatem temporibus earum molestias
+                                laboriosam?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h4>Impossible App</h4>
+                            <p>
+                                Lorem ipsum dolor sit, amet consectetur
+                                adipisicing elit. Adipisci fugit nobis
+                                inventore!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h4>Easy Peasy App</h4>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur
+                                adipisicing elit. Necessitatibus at
+                                distinctio ipsam perspiciatis eaque libero
+                                quasi iure facilis, a quae!
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h4>Ad Blocker</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Veritatis accusamus
+                                fuga dicta reiciendis facilis totam sint
+                                dolorem sequi?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h4>Money Maker</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur
+                                adipisicing elit. Fugiat voluptate ullam
+                                quae quos aliquid quidem facilis cum quia
+                                porro temporibus, placeat velit, accusamus
+                                voluptas fuga dolore. Deserunt omnis
+                                repudiandae ad!
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="announcements">
