add card buttons and complete preliminary styles

--- a/index.html
+++ b/index.html
@@ -79,10 +79,17 @@
                                 placeat praesentium laudantium.
                             </p>
                         </div>
+                        <div class="card-buttons">
+                            <input class="hover-big card-button" type="image" alt="favorite">
+                            <input class="hover-big card-button" type="image" alt="view">
+                            <input class="hover-big card-button" type="image" alt="fork">
+                        </div>
                     </div>
                     <div class="project-card">
                         <div class="card-text">
-                            <h4>Less Cool Project</h4>
+                            <h4>
+                                Less Cool Project
+                            </h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur
                                 adipisicing elit. Laboriosam, beatae?
@@ -93,6 +100,11 @@
                                 laboriosam?
                             </p>
                         </div>
+                        <div class="card-buttons">
+                            <input class="hover-big card-button" type="image" alt="favorite">
+                            <input class="hover-big card-button" type="image" alt="view">
+                            <input class="hover-big card-button" type="image" alt="fork">
+                        </div>
                     </div>
                     <div class="project-card">
                         <div class="card-text">
@@ -102,6 +114,11 @@
                                 adipisicing elit. Adipisci fugit nobis
                                 inventore!
                             </p>
+                        </div>
+                        <div class="card-buttons">
+                            <input class="hover-big card-button" type="image" alt="favorite">
+                            <input class="hover-big card-button" type="image" alt="view">
+                            <input class="hover-big card-button" type="image" alt="fork">
                         </div>
                     </div>
                     <div class="project-card">
@@ -114,6 +131,11 @@
                                 quasi iure facilis, a quae!
                             </p>
                         </div>
+                        <div class="card-buttons">
+                            <input class="hover-big card-button" type="image" alt="favorite">
+                            <input class="hover-big card-button" type="image" alt="view">
+                            <input class="hover-big card-button" type="image" alt="fork">
+                        </div>
                     </div>
                     <div class="project-card">
                         <div class="card-text">
@@ -124,6 +146,11 @@
                                 fuga dicta reiciendis facilis totam sint
                                 dolorem sequi?
                             </p>
+                        </div>
+                        <div class="card-buttons">
+                            <input class="hover-big card-button" type="image" alt="favorite">
+                            <input class="hover-big card-button" type="image" alt="view">
+                            <input class="hover-big card-button" type="image" alt="fork">
                         </div>
                     </div>
                     <div class="project-card">
@@ -137,6 +164,11 @@
                                 voluptas fuga dolore. Deserunt omnis
                                 repudiandae ad!
                             </p>
+                        </div>
+                        <div class="card-buttons">
+                            <input class="hover-big card-button" type="image" alt="favorite">
+                            <input class="hover-big card-button" type="image" alt="view">
+                            <input class="hover-big card-button" type="image" alt="fork">
                         </div>
                     </div>
                 </div>
