add announcements markup and styles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="project-area">
                 <h2 class="project-header">Your Projects</h2>
                 <div class="project-grid">
-                    <div class="project-card">
+                    <div class="project-card general-shadow">
                         <div class="card-text">
                             <h4>Super Cool Project</h4>
                             <p>
@@ -85,7 +85,7 @@
                             <input class="hover-big card-button" type="image" alt="fork">
                         </div>
                     </div>
-                    <div class="project-card">
+                    <div class="project-card general-shadow">
                         <div class="card-text">
                             <h4>
                                 Less Cool Project
@@ -106,7 +106,7 @@
                             <input class="hover-big card-button" type="image" alt="fork">
                         </div>
                     </div>
-                    <div class="project-card">
+                    <div class="project-card general-shadow">
                         <div class="card-text">
                             <h4>Impossible App</h4>
                             <p>
@@ -121,7 +121,7 @@
                             <input class="hover-big card-button" type="image" alt="fork">
                         </div>
                     </div>
-                    <div class="project-card">
+                    <div class="project-card general-shadow">
                         <div class="card-text">
                             <h4>Easy Peasy App</h4>
                             <p>
@@ -137,7 +137,7 @@
                             <input class="hover-big card-button" type="image" alt="fork">
                         </div>
                     </div>
-                    <div class="project-card">
+                    <div class="project-card general-shadow">
                         <div class="card-text">
                             <h4>Ad Blocker</h4>
                             <p>
@@ -153,7 +153,7 @@
                             <input class="hover-big card-button" type="image" alt="fork">
                         </div>
                     </div>
-                    <div class="project-card">
+                    <div class="project-card general-shadow">
                         <div class="card-text">
                             <h4>Money Maker</h4>
                             <p>
@@ -174,10 +174,41 @@
                 </div>
             </div>
             <div class="announcements">
-                <h2 class="content-header">Announcements</h2>
+                <h2 class="project-header">Announcements</h2>
+                <div class="slate general-shadow">
+                    <div class="announcements-text">
+                        <h4>
+                            Site Maintenance
+                        </h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Voluptates unde vel sed error dolores eum nulla aut ad!
+                        </p>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="announcements-text">
+                        <h4>
+                            Community Share Day
+                        </h4>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Odio, consectetur ad. Ut fugiat perferendis sunt?
+                        </p>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="announcements-text">
+                        <h4>
+                            Updated Privacy Policy
+                        </h4>
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                            Libero ea veniam quos quam neque ullam impedit nemo! Fugit?
+                        </p>
+                    </div>
+                </div>
             </div>
             <div class="trending">
-                <h2 class="content-header">Trending</h2>
+                <h2 class="project-header">Trending</h2>
             </div>
         </div>
     </div>
