--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         </p>
                     </div>
             
-                    <div class="profile">
+                    <div class="profile" style="padding-bottom: 0px;">
                         <img src="" alt="alt4">
                         <h6>
                             @alex
